Fix alignment.

--- a/resources/scss/components/dashboard.scss
+++ b/resources/scss/components/dashboard.scss
@@ -36,7 +36,7 @@ main {
         width: 2rem;
       }
 
-      *:not(img, .repositories) {
+      *:not(.repositories) {
         margin-left: 0.5rem;
       }
 
